--- a/src/css/header.sass
+++ b/src/css/header.sass
@@ -2,10 +2,14 @@
   padding: 20px 0
   background-color: $color1
   color: #fff
+  position: sticky
+  top: 0
+  z-index: 100
   a
     color: #fff
   .logo
     font-size: 30px
+    font-weight: 700
   .wrapper
     display: flex
     justify-content: space-between
