--- a/src/pug/detail.pug
+++ b/src/pug/detail.pug
@@ -1,1 +1,158 @@
-p detail page
+mixin relatedItem()
+  li.related-item
+    .left
+      a.related-image(href='#')
+        img(src="https://ik.imagekit.io/tvlk/generic-asset/dgXfoyh24ryQLRcGq00cIdKHRmotrWLNlvG-TxlcLxGkiDwaUSggleJNPRgIHCX6/hotel/asset/10025962-28bc7ebcae9d49b23f8ce4b055944ceb.jpeg?_src=imagekit&tr=c-at_max,h-144,q-40,w-287" alt="" width="150" height="150")
+    .middle
+      a.related-name(href='#')
+        h3 Moonstone Hotel Dalat
+      ul.rating
+        each i in Array(5)
+          li
+            i.fa-solid.fa-star
+      address.address Phường 2, Đà Lạt, Tỉnh Lâm Đồng
+    .right
+      p.price 850.000 VND
+      a.book-button(href='#') Book now
+
+.product-detail-container
+  article.article-product-detail
+    .product-images-wrapper
+      .top-info
+        h1.product-name Khách sạn Liên Viễn Phát
+        p.name-alt Lien Vien Phat Hotel
+        .address
+          i(class="fa-solid fa-location-dot")
+          address 7A/1 Bùi Thị Xuân, Phường 2, Phường 2, Đà Lạt, Tỉnh Lâm Đồng, Việt Nam, 670000
+      .product-images.js-product-images
+        each i in Array(5)
+          img.image(src="https://ik.imagekit.io/tvlk/apr-asset/dgXfoyh24ryQLRcGq00cIdKHRmotrWLNlvG-TxlcLxGkiDwaUSggleJNPRgIHCX6/hotel/asset/10025962-d75934cedb26f92baf41c53e05d83103.jpeg?_src=imagekit&tr=c-at_max,h-360,q-40,w-640" alt="" width="579" height="360")
+    .product-info-wrapper
+      span.product-price 50.000.000 VND
+      a.book-button(href='#') Book this room
+      p.product-description Khách sạn rất ok, phòng sạch sẽ, nhân viên lễ tân - phục vụ rất dễ thương và nhiệt tình. gần chợ với trung tâm thành phố. Chắc chắn sẽ ghé lại dịp không xa. xin cám ơn Lien Vien Phat. Khách sạn rất ok, phòng sạch sẽ, nhân viên lễ tân - phục vụ rất dễ thương và nhiệt tình. gần chợ với trung tâm thành phố. Chắc chắn sẽ ghé lại dịp không xa. xin cám ơn Lien Vien Phat.Khách sạn rất ok, phòng sạch sẽ, nhân viên lễ tân - phục vụ rất dễ thương và nhiệt tình. gần chợ với trung tâm thành phố. Chắc chắn sẽ ghé lại dịp không xa. xin cám ơn Lien Vien Phat.Khách sạn rất ok, phòng sạch sẽ, nhân viên lễ tân - phục vụ rất dễ thương và nhiệt tình. gần chợ với trung tâm thành phố. Chắc chắn sẽ ghé lại dịp không xa. xin cám ơn Lien Vien Phat.
+      iframe.product-map(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15683.764190505612!2d107.2311777!3d10.661684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317509f206a02233%3A0x9bd72a12c653bc88!2zVOG6oXAgaMOzYSBUaGluaA!5e0!3m2!1sen!2s!4v1648970817207!5m2!1sen!2s" allowfullscreen="" loading="lazy")
+
+    .utility-wrapper
+      h3.utility-title Tiện nghi khách sạn
+      .inner-wrapper
+        ul.basic-info
+          li
+            p Số phòng
+            span 4
+          li
+            p Diện tích
+            span 80m2
+          li
+            p Ban công
+            span có
+          li
+            p View
+            span sông núi
+          li
+            p Trẻ em
+            span hỗ trợ
+        ul.utility-list
+          li.utility-item
+            i.fa-solid.fa-tv
+            span Truyền hình cáp
+          li.utility-item
+            i.fa-solid.fa-tv
+            span Bàn làm việc
+          li.utility-item
+            i.fa-solid.fa-tv
+            span Máy sấy tóc
+          li.utility-item
+            i.fa-solid.fa-tv
+            span Minibar
+          li.utility-item
+            i.fa-solid.fa-tv
+            span Tủ lạnh
+          li.utility-item
+            i.fa-solid.fa-tv
+            span Phòng tắm vòi sen
+
+    .nearby-wrapper
+      h3.nearby-title Địa điểm lân cận
+      ul.nearby-list
+        each i in Array(2)
+          li.nearby-item
+            i.fa-solid.fa-shop
+            h3.name Chợ Đà Lạt/ Chợ Đêm Đà Lạt
+            p.note Mua sắm &amp; Quà lưu niệm
+          li.nearby-item
+            i.fa-solid.fa-shop
+            h3.name Big C Dalat
+            p.note Mua sắm &amp; Quà lưu niệm
+          li.nearby-item
+            i.fa-solid.fa-shop
+            h3.name Cáp treo Đà Lạt
+            p.note Hoạt động &amp; Trò chơi
+
+  aside.sidebar
+    .related-wrapper
+      h2.related-title Khách sạn tương tự
+      p.related-description Các khách sạn được ưa thích khác:
+      ul.related-list
+        each i in Array(3)
+          +relatedItem()
+        li
+          a.banner-ads(href='#')
+            img(src="/src/img/related-banner.jpg" alt="" width="400" height="150")
+        each i in Array(3)
+          +relatedItem()
+        li
+          a.banner-ads(href='#')
+            img(src="/src/img/related-banner-02.jpg" alt="" width="400" height="438")
+
+  .feedback-wrapper
+    .overall-feedback
+      span.overall-score 9.0
+      ul.score-detail
+        li
+          span.name Tuyệt vời
+          .bar.js-bar(data-bar-value="80")
+            span
+          span.counter 80
+        li
+          span.name Rất tốt
+          .bar.js-bar(data-bar-value="10")
+            span
+          span.counter 10
+        li
+          span.name Hài lòng
+          .bar.js-bar(data-bar-value="07")
+            span
+          span.counter 7
+        li
+          span.name Trung bình
+          .bar.js-bar(data-bar-value="03")
+            span
+          span.counter 3
+        li
+          span.name Kém
+          .bar.js-bar(data-bar-value="00")
+            span
+          span.counter 0
+    .customer-feedback
+      ul.feedback-list
+        each i in Array(4)
+          li.feedback-item
+            .feedback-user
+              img.user-image(src="https://ik.imagekit.io/tvlk/ugc-review/guys1L+Yyer9kzI3sp-pb0CG1j2bhflZGFUZOoIf1YOBAm37kEUOKR41ieUZm7ZJ/ugc-photo-ap-southeast-1-581603780057-acd24e232f75f09e/ACCOMMODATION/108036975_ACCOMMODATION_1647265747313_b135b70cd0b9a222?_src=imagekit&tr=h-100,q-40,w-100" alt="" width="64" height="64")
+              .user-info
+                p.user-name Trần Nguyễn Thanh Tú
+                span.feedback-date 16/02/2022 
+            .feedback-score
+              i.fa-solid.fa-star-half-stroke
+              span 10 / 10
+            ul.feedback-tags
+              li.tag Sạch sẽ
+              li.tag Thoải mái
+              li.tag Thức ăn ngon
+              li.tag Cảnh đẹp
+            p.feedback-content Very good facilities, nice and friendly staff. Food is great here too! The only thing that made me a bit annoyed is the check in time is at 4pm. Besides that everything was perfect! Very good facilities, nice and friendly staff. Food is great here too! The only thing that made me a bit annoyed is the check in time is at 4pm. Besides that everything was perfect! Very good facilities, nice and friendly staff. Food is great here too! The only thing that made me a bit annoyed is the check in time is at 4pm. Besides that everything was perfect!
+            ul.feedback-images
+              each i in Array(5)
+                li
+                  img(src="https://ik.imagekit.io/tvlk/ugc-review/guys1L+Yyer9kzI3sp-pb0CG1j2bhflZGFUZOoIf1YOBAm37kEUOKR41ieUZm7ZJ/ugc-photo-ap-southeast-1-581603780057-acd24e232f75f09e/ACCOMMODATION/141287437_ACCOMMODATION_1642496020513_135c0cd15a468aa9?_src=imagekit&tr=h-100,q-40,w-100" alt="" width="100" height="100")
