--- a/src/pug/header.pug
+++ b/src/pug/header.pug
@@ -1,8 +1,9 @@
 header.header
   .wrapper
     .left
-      h1.logo Homestay.com
+      a(href='/')
+        h1.logo Homiestay.com
     .right
-      a.booked.reversed-style(href='#') booked
+      a.booked.reversed-style(href='#') Booked
       a.login-button(href='#') Login
       a.signup-button(href='#') Signup
