--- a/src/css/home.sass
+++ b/src/css/home.sass
@@ -1,6 +1,4 @@
-section
-  // margin-bottom: 20px
-  padding: 30px 0
+//common
 
 .section-title
   margin-bottom: 30px
@@ -23,33 +21,34 @@ section
   background-color: #fff
   input
     min-width: 500px
-    padding: 14px 30px 14px 38px
+    padding: 13px 30px 13px 38px
   .form-wrap
     display: inline-block
     height: 50px
     position: relative
     border: 2px solid #fa0
     i
-      position: absolute
-      top: 50%
+      +abs-y
       left: 10px
-      transform: translateY(-50%)
       color: #333
 
-// section-browser
-.section-browser
+// section-browse
+.section-browse
   // nho xoa
   .product-list
-    display: flex
-    flex-wrap: wrap
+    .slick-arrow
+      top: calc(50% - 42px)
   .product-item
     width: 200px
     padding: 0 10px
     .name
+      margin-bottom: 5px
       font-size: 20px
       font-weight: 700
     .detail
       color: $color2
+  .product-link
+    display: block
   .product-image
     width: 100%
     height: 180px
@@ -87,6 +86,7 @@ section
   background-color: #f3f3f3
   .news-list
     display: flex
+    gap: 20px
     margin-bottom: 10px
   .news-item
     display: inline-flex
@@ -94,7 +94,6 @@ section
     justify-content: flex-end
     flex: 1
     height: 300px
-    margin: 0 5px
     padding: 20px
     position: relative
     background: url(https://cf.bstatic.com/xdata/images/xphoto/540x405/144594760.webp?k=e9c1351f708bacdc0d1042d71808fdf01fc568224f3c222eef1daa9ccbc2b76a&o=) center/cover no-repeat
@@ -114,7 +113,6 @@ section
 
 // section-products
 .section-products
-  display: none
   .wrapper
     display: flex
   .sidebar
@@ -126,7 +124,7 @@ section
     display: flex
     margin-bottom: 20px
     padding: 16px
-    border: 1px solid $color2
+    border: 1px solid #ccc
   // .left
   .right
     flex: 1
