--- a/src/css/home.sass
+++ b/src/css/home.sass
@@ -1,3 +1,5 @@
+@charset 'utf-8'
+
 //common
 
 .section-title
@@ -19,18 +21,41 @@
 
 .search-form-wrapper
   background-color: #fff
-  input
+  .search-form
+    display: flex
+    align-items: center
+    gap: 20px
+  .keyword-input
     min-width: 500px
-    padding: 13px 30px 13px 38px
-  .form-wrap
+    height: 100%
+    padding: 13px 30px 13px 50px
+  .input-wrap
     display: inline-block
     height: 50px
     position: relative
-    border: 2px solid #fa0
-    i
-      +abs-y
-      left: 10px
-      color: #333
+    border-right: 1px solid #ccc
+  .search-icon
+    +abs-y
+    left: 20px
+    color: #333
+    font-size: 18px
+  .date-picker
+    display: inline-flex
+    align-items: center
+    height: 50px
+    color: #333
+    border-right: 1px solid #ccc
+    position: relative
+    z-index: 1
+  .date-picker-input
+    width: 100%
+    height: 100%
+    min-width: 300px
+    padding: 0 25px 0 50px
+  .date-icon
+    +abs-y
+    left: 10px
+    font-size: 30px
 
 // section-browse
 .section-browse
@@ -118,6 +143,7 @@
   .sidebar
     flex: 0 0 500px
     background: linear-gradient(to bottom,#febb02 0,#febb02 100%)
+
 .common-list
   margin-bottom: -20px
   .list-item
@@ -125,10 +151,8 @@
     margin-bottom: 20px
     padding: 16px
     border: 1px solid #ccc
-  // .left
   .right
     flex: 1
-  // .item-link
   .item-image
     flex: 0 0 200px
     margin-right: 20px
