--- a/src/pug/script.pug
+++ b/src/pug/script.pug
@@ -1,3 +1,6 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-<script type="module" src="/main.js"></script>
+script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js")
+script(src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js")
+script(src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js")
+script(src="https://cdn.jsdelivr.net/npm/flatpickr")
+script(src="https://npmcdn.com/flatpickr/dist/l10n/vn.js")
+script(type="module" src="/main.js")
