--- a/src/style.sass
+++ b/src/style.sass
@@ -1,3 +1,5 @@
+@charset 'utf-8'
+
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap')
 @import css/config.sass
 
@@ -64,6 +66,9 @@ img
 section
   padding: 30px 0
 
+.wow
+  visibility: hidden
+
 // mixins
 =fontawesome
   font-style: normal
@@ -87,6 +92,7 @@ section
 
 @import css/header.sass
 @import css/footer.sass
+@import css/wow.sass
 @import css/slick.sass
 
 @import css/home.sass
