update sp page detail

--- a/src/css/config.sass
+++ b/src/css/config.sass
@@ -5,3 +5,32 @@ $color2: #6b6b6b
 $color3: #ff5e1f
 $color4: #0194f3
 $primary-font: 'Open Sans', sans-serif
+
+// mixins
+=fontawesome
+  font-style: normal
+  font-variant: normal
+  line-height: 1
+  text-rendering: auto
+  font-family: 'Font Awesome 6 Free'
+
+=abs-xy
+  position: absolute
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
+=abs-x
+  position: absolute
+  left: 50%
+  transform: translateX(-50%)
+=abs-y
+  position: absolute
+  top: 50%
+  transform: translateY(-50%)
+
+=desktop
+  @media print, (min-width: 768px)
+    @content
+=mobile
+  @media only screen and (max-width: 767.98px)
+    @content
