--- a/src/css/header.sass
+++ b/src/css/header.sass
@@ -23,8 +23,18 @@
       background-color: #fff
       color: $color1
       border: 1px solid #fff
-      // border-radius: 8px
       &.reversed-style
         background-color: $color1
         border-color: #fff
         color: #fff
+
++mobile
+  .header
+    padding: 10px 0
+    .logo
+      margin-bottom: 10px
+      text-align: center
+    .wrapper
+      flex-direction: column
+    .right
+      justify-content: center
