--- a/src/pug/meta.pug
+++ b/src/pug/meta.pug
@@ -6,5 +6,5 @@ link(rel="preconnect" href="https://fonts.googleapis.com")
 link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
 link(rel="stylesheet" href="/src/style.sass")
 link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css")
-link(rel="stylesheet" href="/src/css/fontawesome/css/all.css")
+link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css")
 link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
