--- a/src/pug/detail.pug
+++ b/src/pug/detail.pug
@@ -37,21 +37,12 @@ mixin relatedItem()
       h3.utility-title Tiện nghi khách sạn
       .inner-wrapper
         ul.basic-info
-          li
+          li.product-rooms
             p Số phòng
             span 4
-          li
+          li.product-surface
             p Diện tích
             span 80m2
-          li
-            p Ban công
-            span có
-          li
-            p View
-            span sông núi
-          li
-            p Trẻ em
-            span hỗ trợ
         ul.utility-list
           li.utility-item
             i.fa-solid.fa-tv
