--- a/src/pug/footer.pug
+++ b/src/pug/footer.pug
@@ -5,19 +5,19 @@ footer.footer
         h2.logo Homiestay.com
       ul.social-list
         li.social-item
-          a.social-link(href="#") 
+          a.social-link(href="https://www.facebook.com/homiehomestay01/" target="_blank") 
             i.fa-brands.fa-facebook-square
             span Facebook
         li.social-item
-          a.social-link(href="#") 
+          a.social-link(href="#" target="_blank") 
             i.fa-brands.fa-instagram-square
             span Instagram
         li.social-item
-          a.social-link(href="#") 
+          a.social-link(href="#" target="_blank") 
             i.fa-brands.fa-twitter-square
             span Twitter
         li.social-item
-          a.social-link(href="#") 
+          a.social-link(href="#" target="_blank") 
             i.fa-brands.fa-youtube-square
             span Youtube
     .right
