--- a/src/pug/home.pug
+++ b/src/pug/home.pug
@@ -70,7 +70,7 @@ section.section-news
             h3.news-title The top 5 cities for vegan travelers
             p.news-description Vegan-friendly eateries abound in these travel destinations…
 
-section.section-products.hidden
+section.section-products
   .wrapper
     .sidebar
     .common-list
