--- a/src/css/home.sass
+++ b/src/css/home.sass
@@ -21,6 +21,21 @@
     margin-bottom: 100px
     font-size: 20px
 
++mobile
+  .section-keyvisual
+    height: calc(100vh - 118px)
+    padding: 0
+    .wrapper
+      display: flex
+      flex-direction: column
+      justify-content: space-evenly
+      height: 100%
+    .keyvisual-title
+      margin-bottom: 0
+      line-height: 1.1
+    .keyvisual-text
+      margin-bottom: 0
+
 .search-form-wrapper
   background-color: #fff
   .search-form
@@ -58,6 +73,19 @@
     +abs-y
     left: 10px
     font-size: 30px
+
++mobile
+  .search-form-wrapper
+    width: 100%
+    .search-form
+      flex-direction: column
+      gap: 10px
+      > label
+        width: 100%
+        border: 1px solid #ccc
+    .keyword-input
+      min-width: unset
+      width: 100%
 
 // section-browse
 .section-browse
@@ -118,6 +146,16 @@
       height: 100%
       object-fit: cover
 
++mobile
+  .section-browse
+    .covid-notice
+      padding: 15px 60px 15px 60px
+      font-size: 15px
+      .fa-circle-info
+        left: 20px
+      .close-button
+        right: 0
+
 // section-banner
 .section-banner
   .banner-list
@@ -145,6 +183,14 @@
   .banner-description
     color: #eee
 
++mobile
+  .section-banner
+    .banner-list
+      flex-direction: column
+      gap: 10px
+    .banner-item
+      flex: unset
+
 // section-news
 .section-news
   background-color: #f3f3f3
@@ -168,11 +214,19 @@
   .news-description
     color: #eee
 
++mobile
+  .section-news
+    .news-list
+      flex-direction: column
+    .news-item
+      flex: unset
+
 // section-ads
 .section-ads
   padding: 0
   background-color: #ffb301
   .banner-ads
+    display: flex
     width: 100%
 
 // section-products
@@ -182,6 +236,11 @@
   .sidebar
     flex: 0 0 500px
     background: linear-gradient(to bottom,#febb02 0,#febb02 100%)
+
++mobile
+  .section-products
+    .sidebar
+      display: none
 
 .common-list
   margin-bottom: -20px
@@ -205,7 +264,7 @@
       color: #bc5b01
   .address-info
     display: flex
-    gap: 15px
+    gap: 5px 15px
     margin-bottom: 10px
   .address
     font-size: 14px
@@ -217,3 +276,16 @@
   .item-description
     font-size: 14px
     color: #555
+
++mobile
+  .common-list
+    .list-item
+      display: block
+    .item-image
+      display: flex
+      margin-right: 0
+      margin-bottom: 20px
+    .address-info
+      flex-wrap: wrap
+    .address
+      flex: 0 0 100%
