--- a/src/css/header.sass
+++ b/src/css/header.sass
@@ -16,7 +16,7 @@
     display: flex
     justify-content: space-between
   .right
-    display: flex
+    display: none
     a
       margin: 5px 10px
       padding: 6px 20px
