--- a/src/css/slick.sass
+++ b/src/css/slick.sass
@@ -1,5 +1,11 @@
 @charset 'utf-8'
 
+.slick-track
+  display: flex !important
+  .slick-slide
+    height: auto
+    object-fit: cover
+
 .slick-arrow
   +fontawesome
   +abs-y
