--- a/src/pug/home.pug
+++ b/src/pug/home.pug
@@ -1,4 +1,4 @@
-section.section-keyvisual
+section.section-keyvisual.unique-home-page
   .wrapper
     h2.keyvisual-title A lifetime of discounts? It's Genius.
     p.keyvisual-text Get rewarded for your travels - unlock instant savings of 10% or more with a free Booking.com account
@@ -22,28 +22,13 @@ section.section-browse
     h2.section-title Browse by property type
     .product-list-wrapper
       .product-list.js-slider-01
-        each i in Array(12)
-          .product-item
-            a.product-link(href='/detail/')
-              figure.product-image
-                img(src='https://cf.bstatic.com/static/img/theme-index/carousel_320x240/card-image-chalet_300/8ee014fcc493cb3334e25893a1dee8c6d36ed0ba.jpg' alt='')
-              h3.name Melia Ho Tram Beach Resort
-              p.detail Thành phố Vũng Tàu
 
 section.section-banner
   .wrapper
     h2.section-title Cities
     .banner-wrapper
       .banner-list
-        each i in Array(2)
-          a.banner-item(href='#')
-            h3.banner-title Ho Chi Minh City
-            p.banner-description 425 khách sạn
       .banner-list
-        each i in Array(3)
-          a.banner-item(href='#')
-            h3.banner-title Da Lat
-            p.banner-description 398 khách sạn
 
 section.section-news
   .wrapper
@@ -70,7 +55,7 @@ section.section-news
             h3.news-title The top 5 cities for vegan travelers
             p.news-description Vegan-friendly eateries abound in these travel destinations…
 
-section.section-products
+section.section-products.hidden
   .wrapper
     .sidebar
     .common-list
