--- a/src/css/detail.sass
+++ b/src/css/detail.sass
@@ -202,11 +202,15 @@
     .article-product-detail
       flex: 0 0 770px
       margin-right: 30px
-    .product-images
+    .product-images,
+    .product-images .image
       width: 770px
+      height: 480px
     .utility-wrapper
       .basic-info
         flex: 0 0 290px
+        p
+          max-width: 150px
     .nearby-wrapper
       padding-bottom: 20px
       .nearby-list
@@ -216,6 +220,9 @@
         max-height: 200px
         margin-bottom: 20px
         gap: 0 40px
+        overflow: hidden
+      .nearby-item
+        min-width: 30%
     .sidebar
       flex: 0 0 400px
 
